--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-slackclient = "==1.1.0"
+slackclient = "~=2.1"
 slackeventsapi = "==1.1.0"
 
 [dev-packages]
